samples/_failures_safe/1761698698_7dc8ac_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_c9e67641.c: In function ‘main’:
./samples/SAFE/__tmp_c9e67641.c:154:12: error: missing terminating " character
  154 |     printf("\nFirst Matrix:\
      |            ^~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_c9e67641.c:154:5: error: expected expression at end of input
  154 |     printf("\nFirst Matrix:\
      |     ^~~~~~
./samples/SAFE/__tmp_c9e67641.c:154:5: error: expected declaration or statement at end of input
